apps/authentik/helm-authentik-source.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: authentik
    labels:
      apps.gitops: authentik
      prometheus: scrape
